...
            <objects>
                <viewController id="EeZ-eu-Ze6" customClass="SearchViewController" customModule="BookStore" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="nxc-hN-TGS">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="hhl-Jn-Ynu">
                                <rect key="frame" x="0.0" y="44" width="414" height="56"/>
                                <textInputTraits key="textInputTraits" spellCheckingType="no"/>
                            </searchBar>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X4H-FT-vd5">
                                <rect key="frame" x="0.0" y="100" width="414" height="796"/>
                                <subviews>
...
                    <view key="view" contentMode="scaleToFill" id="uj1-mt-QgV">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="1120"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48Y-5n-4ao">
                                <rect key="frame" x="0.0" y="50" width="58" height="58"/>
                                <accessibility key="accessibilityConfiguration" identifier="Close"/>
                                <inset key="contentEdgeInsets" minX="14" minY="14" maxX="14" maxY="14"/>
                                <state key="normal" image="ic_close"/>
                                <connections>
                                    <action selector="closeButtonTapped:" destination="UR2-mv-aIQ" eventType="touchUpInside" id="5Xb-zQ-0eN"/>
                                </connections>
                            </button>
...
                                                <color key="backgroundColor" red="0.71674925089999997" green="0.13573819400000001" blue="0.3581678271" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="WZv-zu-UkC"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <state key="normal" title="Buy from BookStore"/>
                                                <connections>
                                                    <action selector="buyButtonTapped:" destination="UR2-mv-aIQ" eventType="touchUpInside" id="zcd-Qn-Mnd"/>
                                                </connections>
                                            </button>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pRf-sl-0af" userLabel="Separator">
                                                <rect key="frame" x="16" y="620.5" width="382" height="30"/>
...
